--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -13,16 +13,13 @@
 <li><a href="http://www.iseesong.com/bbs/default.asp">iSeeSong BBS</a>
 <!--End of section (do not delete this comment)-->
 </ul>
-<h2>Resource</h2>
-<ul>
-<li><a href="http://del.icio.us/">del.icio.us</a>
-<!--End of section (do not delete this comment)-->
-</ul>
 <h2>WebResource</h2>
 <ul>
+<li><a href="http://del.icio.us/">del.icio.us</a>
 <li><a href="http://www.gmane.org/">Gmane -- Mail To News And Back Again</a>
 <li><a href="http://www.w3.org/TR/1999/REC-html401-19991224/">HTML 4.01 Specification</a>
 <li><a href="http://www.w3.org/TR/1999/REC-CSS1-19990111">Cascading Style Sheets, level 1</a>
+<li><a href="http://en.wikipedia.org">WikiPedia</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 <h2>Python</h2>
@@ -36,6 +33,12 @@
 <h2>Mails</h2>
 <ul>
 <li><a href="http://mail.google.com/mail/h/1xo7yvomezz7b/?">Gmail - Inbox</a>
+<!--End of section (do not delete this comment)-->
+</ul>
+<h2>Python</h2>
+<ul>
+<li><a href="file:///usr/share/doc">Local Docs</a>
+<li><a href="file:///usr/share/doc/postgresql-doc-8.1/html/index.html">Posgres 8.1 Local Docs</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 </body>
